[package]
authors = ["clux <sszynrae@gmail.com>"]
name = "dieselpgcrate"
version = "0.1.0"

[dependencies.diesel]
features = ["postgres"]
version = "0.16.0"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.16.0"

[patch.crates-io]
pq-sys = { git = 'https://github.com/golddranks/pq-sys' }
